# tap-test-data

./: .gitignore  LICENSE  README.md  meltano.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: test.yml
tap_testdata/: __init__.py  streams.py  tap.py
tests/: __init__.py  test_core.py
